service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-service 
spec:
  selector:
    app: REPLACE_ME_SVC_APP_SELECTOR
  ports:
  - port: 8080
    targetPort: 8080
