route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: REPLACE_ME_RT_NAME  
spec: 
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: container-service
    weight: 100
